--- a/teapot.html
+++ b/teapot.html
@@ -6,42 +6,20 @@
 <title>Rotating Squares</title>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
-attribute vec4 vPosition;
+attribute vec3 vPosition;
 attribute vec4 vColor;
 uniform vec3 theta;
+
+uniform mat4 mvm;
+uniform mat4 ortho;
 
 // varying type variable to share with fragment shader, as the color
 // will be sent to the fragment shader
 varying vec4 fColor;
 
 void main() {
-	vec3 angles = radians(theta);
-	vec3 c = cos(angles);
-	vec3 s = sin(angles);
-
-	mat4 rx = mat4(
-		1.0, 0.0, 0.0, 0.0,
-		0.0, c.x, s.x, 0.0,
-		0.0, -s.x ,c.x, 0.0,
-		0.0, 0.0, 0.0 , 1.0
-	);
-
-	mat4 ry = mat4(
-		c.y, 0.0, -s.y, 0.0,
-		0.0, 1.0, 0.0, 0.0,
-		s.y, 0.0, c.y, 0.0,
-		0.0, 0.0, 0.0, 1.0
-		);
-	
-	mat4 rz = mat4(
-		c.z, -s.z, 0.0, 0.0,
-		s.z, c.z, 0.0, 0.0,
-		0.0, 0.0, 1.0, 0.0,
-		0.0, 0.0, 0.0, 1.0
-		);
-
 	fColor = vColor;
-	gl_Position = rz * ry * rx * vPosition;
+	gl_Position =  ortho * vec4(vPosition,1.0);
 }
 </script>
 
